data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3817.wast
;; 6. **Test Description**: Create a `br_table` with indices referencing valid function indices but provide incorrect types for the arguments. This tests if the implementation correctly checks and validates argument types against the function’s expected types.

(assert_invalid
  (module
    (type $funcType (func (param i32) (result i32)))
    (func $func0 (param i64) (result i32) (i32.const 42))
    (func $func1 (param i32) (result i32) (local.get 0))
    (func $testFunc
      (block (call $func0 (i32.const 0)))
      (block (call $func1 (i64.const 0)))
    )
  )
  "type mismatch"
)